[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "0.1.0"
description = "Python Agent Bridge service integrating Coze API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Work-Agent Team"}
]
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "httpx>=0.26.0,<1.0.0",
  "pydantic>=2.5.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn[standard]>=0.23.0,<1.0.0",
  "sse-starlette>=1.0.0,<2.0.0", # [FIXED] 添加缺失的 SSE 依赖
  "jinja2>=3.1.0,<4.0.0",
  "tenacity>=8.2.0,<9.0.0",
  "asyncpg>=0.29.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "respx>=0.20.0"
]
